[package]
authors = ["Adrian Wannenmacher <tfld@tfld.dev>"]
categories = ["command-line-utilities"]
description = "A simple usage tracker in rust."
edition = "2018"
homepage = "https://git.tfld.dev/tfld/usage-tracker"
keywords = ["cli", "usage", "tracking", "analysis", "prediction"]
license = "MIT"
name = "usage-tracker"
readme = "README.md"
repository = "https://git.tfld.dev/tfld/usage-tracker"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
exitcode = "1.1"
human-panic = "1.0"
serde = {version = "1.0", features = ["derive"]}
ron = "0.5"
standard_paths = "0.4"
structopt = "0.3"
