[package]
authors = ["Adrian Wannenmacher <tfld@tfld.dev>"]
categories = ["command-line-utilities"]
description = "A simple usage tracker in rust."
edition = "2018"
homepage = "https://github.com/TeFiLeDo/usage-tracker"
keywords = ["cli", "usage", "tracking", "analysis", "prediction"]
license = "MIT"
name = "usage-tracker"
readme = "README.md"
repository = "https://github.com/TeFiLeDo/usage-tracker"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = {version = "0.4", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
ron = "0.6"
standard_paths = "0.4"
structopt = "0.3"
thiserror = "1.0"
