[package]
authors = ["Adrian Wannenmacher <tfld@tfld.dev>"]
categories = ["command-line-utilities"]
description = "A simple usage tracker in rust."
documentation = "https://docs.rs/usage-tracker"
edition = "2018"
homepage = "https://github.com/TeFiLeDo/usage-tracker"
keywords = ["cli", "usage", "tracking", "analysis", "prediction"]
license = "MIT"
name = "usage-tracker"
readme = "README.md"
repository = "https://github.com/TeFiLeDo/usage-tracker"
version = "0.3.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
atty = "0.2.14"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.1.18", features = ["derive"] }
human-panic = "1.0.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
ron = "0.7.1"
standard_paths = "1.1.0"
thiserror = "1.0.31"
